# coffee_dial_in_companion

./: .eslintignore  .gitignore  README.md  package.json  pnpm-lock.yaml
.husky/: pre-commit
backend/: .gitignore  manage.py  pyproject.toml  schema.yml  setup.py
backend/myproject.egg-info/: SOURCES.txt  requires.txt  top_level.txt
backend/mysite/: __init__.py  models copy.py  models.py  serializers.py  settings.py  thing.py  urls.py  views.py  viewsets.py
backend/mysite/migrations/: 0001_initial.py
backend/mysite/settings/: base.py  desktop.py
backend/polls/: admin.py  models.py
backend/polls/migrations/: 0001_initial.py
backend/users/: models.py  pipeline.py  serializers.py  viewsets.py
backend/users/migrations/: 0001_initial.py
django-vue-test/: README.md  package.json  pnpm-lock.yaml
django-vue-test/src/: App.vue  main.ts  shims-vue.d.ts
django-vue-test/src/auth/: AuthService.js  AuthService.ts
docs/: OpenApi.md  Setting Configuration.md
frontend/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.vitest.json  vite.config.ts
frontend/src/: App.vue  main.ts  routes.ts  shims-tsx.d.ts
frontend/src/api/: cof.ts  cofpull.ts  index.ts
frontend/src/assets/: base.css  homestyle.css  native.sass
frontend/src/auth/: AuthService.ts
frontend/src/components/: TheWelcome.vue
frontend/src/composables/: index.ts  loadableObject.ts  paginatedTable.ts
frontend/src/openapi/: api.ts  base.ts  common.ts  configuration.ts  index.ts
frontend/src/route/: index.ts  names.ts
frontend/src/router/: index.ts
(+15 files in other folders)
